--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -305,7 +305,8 @@
 %   This allows the \meta{tl~var} to contain material
 %   with category codes other than those that apply when \meta{tokens}
 %   are absorbed.  The \meta{setup} is run within a group and may
-%   contain any valid input, although only changes in category codes
+%   contain any valid input, although only changes in category codes,
+%   such as uses of \cs{cctab_select:N},
 %   are relevant. See also \cs{tl_rescan:nn}.
 %   \begin{texnote}
 %     The \meta{tokens} are first turned into a string (using
@@ -332,7 +333,8 @@
 %   by the \meta{setup} are those in force at the point of use of
 %   \cs{tl_rescan:nn}.)
 %   The \meta{setup} is run within a group and may
-%   contain any valid input, although only changes in category codes
+%   contain any valid input, although only changes in category codes,
+%   such as uses of \cs{cctab_select:N},
 %   are relevant.  See also \cs{tl_set_rescan:Nnn}, which is more
 %   robust than using \cs{tl_set:Nn} in the \meta{tokens} argument of
 %   \cs{tl_rescan:nn}.
