Ensure in LuaTeX that all higher catcodes are other in \c_other_cctab

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -555,13 +555,13 @@
   }
 \cctab_const:Nn \c_other_cctab
   {
+    \cctab_select:N \c_initex_cctab
     \int_step_inline:nnn { 0 } { 127 }
       { \char_set_catcode_other:n {#1} }
   }
 \cctab_const:Nn \c_str_cctab
   {
-    \int_step_inline:nnn { 0 } { 127 }
-      { \char_set_catcode_other:n {#1} }
+    \cctab_select:N \c_other_cctab
     \char_set_catcode_space:n { 32 }
   }
 %    \end{macrocode}
