--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -206,10 +206,12 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_internal_tl}
-%   Scratch space when popping sequences.
+% \begin{variable}{\l_@@_table_tl}
+%   Used when popping sequences: consists of the catcodetable number
+%   (integer denotation) in \LuaTeX{}, or of an intarray variable (as a
+%   single token) in other engines.
 %    \begin{macrocode}
-\tl_new:N \l_@@_internal_tl
+\tl_new:N \l_@@_table_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -377,7 +379,7 @@
 %   For \cs{cctab_begin:N}/\cs{cctab_end:} we will need to allocate
 %   dynamic tables.  This is done here by \cs{@@_begin_aux:}, which puts
 %   a table number (in \LuaTeX{}) or name (in other engines) into
-%   \cs{l_@@_internal_tl}.  In \LuaTeX{} this simply calls \cs{@@_new:N}
+%   \cs{l_@@_table_tl}.  In \LuaTeX{} this simply calls \cs{@@_new:N}
 %   and uses the resulting catcodetable number; in other engines we need
 %   to give a name to the intarray variable and use that.
 %    \begin{macrocode}
@@ -386,7 +388,7 @@
     \cs_new_protected:Npn \@@_begin_aux:
       {
         \@@_new:N \g_@@_next_cctab
-        \tl_set:NV \l_@@_internal_tl \g_@@_next_cctab
+        \tl_set:NV \l_@@_table_tl \g_@@_next_cctab
         \cs_undefine:N \g_@@_next_cctab
       }
   }
@@ -396,7 +398,7 @@
         \int_gincr:N \g_@@_allocate_int
         \exp_args:Nc \@@_new:N
           { g_@@_ \int_use:N \g_@@_allocate_int _cctab }
-        \exp_args:NNc \tl_set:Nn \l_@@_internal_tl
+        \exp_args:NNc \tl_set:Nn \l_@@_table_tl
           { g_@@_ \int_use:N \g_@@_allocate_int _cctab }
       }
   }
@@ -406,21 +408,21 @@
 %
 % \begin{macro}{\cctab_begin:N, \cctab_begin:c}
 %   Check the \meta{cctab~var} exists, to avoid low-level errors.  Get
-%   in \cs{l_@@_internal_tl} the number/name of a dynamic table, either
+%   in \cs{l_@@_table_tl} the number/name of a dynamic table, either
 %   from \cs{g_@@_unused_seq} where we save tables that are not
 %   currently in use, or from \cs{@@_begin_aux:} if none are available.
 %   Then save the current catcodes into the table (pointed to by)
-%   \cs{l_@@_internal_tl} and save that table number in a stack before
+%   \cs{l_@@_table_tl} and save that table number in a stack before
 %   selecting the desired catcodes.
 %    \begin{macrocode}
 \cs_new_protected:Npn \cctab_begin:N #1
   {
     \@@_chk_if_valid:NT #1
       {
-        \seq_gpop:NNF \g_@@_unused_seq \l_@@_internal_tl
+        \seq_gpop:NNF \g_@@_unused_seq \l_@@_table_tl
           { \@@_begin_aux: }
-        \seq_gpush:NV \g_@@_stack_seq { \l_@@_internal_tl }
-        \exp_after:wN \@@_gset:w \l_@@_internal_tl \scan_stop:
+        \seq_gpush:NV \g_@@_stack_seq \l_@@_table_tl
+        \exp_after:wN \@@_gset:w \l_@@_table_tl \scan_stop:
         \@@_select:N #1
       }
   }
@@ -430,17 +432,17 @@
 %
 % \begin{macro}{\cctab_end:}
 %   Make sure a \cs{cctab_begin:N} was used some time earlier, get in
-%   \cs{l_@@_internal_tl} the catcode table number/name in which the
+%   \cs{l_@@_table_tl} the catcode table number/name in which the
 %   prevailing catcodes were stored, then restore these catcodes.  The
 %   dynamic table is now unused hence stored in \cs{g_@@_unused_seq} for
 %   recycling by later \cs{cctab_begin:N}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \cctab_end:
   {
-    \seq_gpop:NNTF \g_@@_stack_seq \l_@@_internal_tl
+    \seq_gpop:NNTF \g_@@_stack_seq \l_@@_table_tl
       {
-        \seq_gpush:NV \g_@@_unused_seq \l_@@_internal_tl
-        \@@_select:N \l_@@_internal_tl
+        \seq_gpush:NV \g_@@_unused_seq \l_@@_table_tl
+        \@@_select:N \l_@@_table_tl
       }
       { \__kernel_msg_error:nn { kernel } { cctab-extra-end } }
   }
