--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -587,6 +587,7 @@
     \char_set_catcode_space:n          { 9 }
     \char_set_catcode_space:n          { 32 }
     \char_set_catcode_other:n          { 58 }
+    \char_set_catcode_other:n          { 64 }
     \char_set_catcode_math_subscript:n { 95 }
     \char_set_catcode_active:n         { 126 }
   }
